# splora

./: .gitignore  Makefile  README.md  _references.txt  isbi_figures.ipynb  isbi_figures.py  pyproject.toml  regparam.1D  setup.cfg  setup.py  test_low_rank.ipynb  tox.ini
.circleci/: config.yml
.github/workflows/: python-publish.yml
low_rank_pfm/: __init__.py  _version.py  io.py  low_rank_pfm.py
low_rank_pfm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
low_rank_pfm/cli/: run.py
low_rank_pfm/src/: debiasing.py  fista.py  fista_update.py  hrf_matrix.py  low_rank.py
multi_echo/: call.sh  splora_2021-08-10T143952.tsv
resources/: simulate.py
splora/: .codecov.yml  .gitignore  Makefile  README.md  __init__.py  _version.py  io.py  splora.py  utils.py
splora/cli/: __init__.py  run.py
splora/deconvolution/: .pre-commit-config.yaml  __init__.py  compute_fista.py  compute_fista.sh  compute_fista.slurm  compute_fista_test.slurm  debiasing.py  fista.py  hrf_matrix.py  stability_selection.py
splora/splora/: __init__.py  io.py
splora/splora/deconvolution/: compute_fista.py  fista.py  stability_selection.py
splora/splora/tests/: test_debiasing.py  test_fista.py  test_hrf_matrix.py  test_io.py
splora/splora/tests/data/: deb_block.npy  hrf.npy  visual_task.1d
splora/tests/: conftest.py  test_block_model.py  test_debiasing.py  test_fista.py  test_hrf_matrix.py  test_integration.py  test_io.py  test_stability_selection.py  utils.py
splora/tests/data/: deb_spike_beta.npy  deb_spike_fitted.npy  hrf_linear.npy  hrf_matrix.npy  hrf_norm.npy  inno.npy  visual_task_output.npy
splora/utils/: debiasing.py  fista.py  hrf_matrix.py
