[metadata]
name = low_rank_pfm
url = https://github.com/eurunuela/splora
download_url = https://github.com/eurunuela/splora
author = Eneko Uruñuela
maintainer = Eneko Uruñuela
maintainer_email = e.urunuela@bcbl.eu
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
license = Apache-2.0
description = Python library to estimate neuronal activity-related, activity-inducing and innovaition signals, as well as estimating global fluctuations.
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
provides =
    low_rank_pfm

[options]
python_requires = >=3.6.1
install_requires =
    nilearn
    numpy
    PyWavelets
    scipy
    sklearn
    tedana
tests_require =
    pytest >=5.3
test_suite = pytest
zip_safe = False
packages = find:

[options.entry_points]
console_scripts =
    splora=splora.splora:_main

[flake8]
exclude=
    *build/
    heuristics
    tests
ignore = E126, E402, W503
max-line-length = 99
per-file-ignores =
    */__init__.py:F401

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx

[versioneer]
VCS = git
style = pep440
versionfile_source = splora/_version.py
versionfile_build = splora/_version.py
tag_prefix =
parentdir_prefix =
